--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <div id="app">
       {{ message }}
     </div>
+    <br>
+    <div id="app-2">
+      <span v-bind:title="message">
+        Hover your mouse over me for a few seconds to see my dynamically bound
+        title!
+      </span>
+    </div>
+
     <script src="main.js"></script>
   </body>
 </html>
