--- a/index.html
+++ b/index.html
@@ -15,12 +15,32 @@
     <div id="app">
       {{ message }}
     </div>
-    <br>
+
+    <br />
+
     <div id="app-2">
       <span v-bind:title="message">
         Hover your mouse over me for a few seconds to see my dynamically bound
         title!
       </span>
+    </div>
+
+    <br />
+
+    <div id="app-3">
+      <span v-if="seen"
+        >Now you see me (edit the app3.seen value and change it to false)</span
+      >
+    </div>
+
+    <br />
+
+    <div id="app-4">
+      <ol>
+        <li v-for="todo in todos">
+          {{ todo.text }}
+        </li>
+      </ol>
     </div>
 
     <script src="main.js"></script>
